--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,4 @@
-footer {
+.footer {
     width: 100%;
     height: 60px;
     background-color: rgba(0, 0, 0, 0.3);
@@ -10,7 +10,7 @@ footer {
     margin-top: 3%;
 }
 
-.footer-text {
+.footerText {
     color: white;
     font-family: "Ultra", serif;
     font-size: 20px;
