--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
-header {
+.header {
     display: flex;
     margin: 0;
-    height: 80px; 
+    height: 80px;
     width: 100vw;
     margin-left: 40px;
 }
@@ -12,36 +12,36 @@ header {
     font-weight: 500;
     padding: 12px;
     display: flex;
-    font-size: 18px; 
+    font-size: 18px;
     justify-content: space-between;
 }
 
-.button-header {
+.buttonHeader {
     margin-left: 20px;
-    padding: 15px 30px; 
+    padding: 15px 30px;
     font-family: "Ultra", serif;
     font-size: 18px;
     font-weight: 500;
     background-color: rgba(0, 0, 0, 0.6);
     color: white;
-    border: 2px solid #e99400; 
+    border: 2px solid #e99400;
     border-radius: 20px;
     cursor: pointer;
 }
 
-.button-header:hover {
+.buttonHeader:hover {
     background-color: #e99400;
 }
 
-.special-button {
+.specialButton {
     margin-left: 20px;
-    padding: 15px 30px; 
+    padding: 15px 30px;
     font-family: "Ultra", serif;
     font-size: 18px;
     font-weight: 500;
     color: white;
     background-color: black;
-    border: 2px solid #e99400; 
+    border: 2px solid #e99400;
     border-radius: 20px;
     cursor: pointer;
 }
