--- a/src/pages/Community/Community.module.css
+++ b/src/pages/Community/Community.module.css
@@ -1,4 +1,4 @@
-.text-container-about-title {
+.textContainerAboutTitle {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -16,7 +16,7 @@
     font-size: 28px;
 }
 
-.title-container-community {
+.titleContainerCommunity {
     font-family: "Ultra", serif;
     color: white;
     font-size: 48px;
@@ -27,7 +27,7 @@
     margin-bottom: -5%;
 }
 
-.dog-image-container {
+.dogImageContainer {
     display: flex;
     margin-top: -640px;
     margin-left: 1000px;
@@ -36,14 +36,14 @@
     object-fit: cover;
 }
 
-.dog-image {
+.dogImage {
     max-width: 100%;
     height: auto;
     border-radius: 10px;
     box-shadow: 0px 2px 71px -5px #e99400;
 }
 
-.dog-image:hover {
+.dogImage:hover {
     box-shadow: 0px 5px 75px 12px #fdbd4e;
     color: white;
-  }
+}
