--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,39 +1,41 @@
-.text-container-title {
+.textContainerTitle {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     font-weight: 500;
     font-size: 18px;
-    margin-top: 2%;
+    margin-top: 3%;
     width: 50vw;
     margin-left: 75px;
 }
 
-.text-container {
+.textContainer {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     font-size: 30px;
     width: 45vw;
     height: 5vw;
-    margin-top: 0;
+    margin-top: 10;
     font-family: "Atma", serif;
     color: white;
     font-size: 24px;
     margin-left: 75px;
     opacity: 0.8;
 }
-.text-container p {
+
+.textContainer p {
     margin: 0;
 }
 
 .ultra {
     color: white;
     font-family: "Ultra", serif;
-    font-size: 96px
+    font-size: 96px;
 }
+
 .atma {
     color: white;
     font-family: "Atma", serif;
@@ -41,20 +43,22 @@
     font-style: normal;
     font-size: 24px;
 }
-.button-container {
+
+.buttonContainer {
     display: flex;
-    flex-direction: column;  
-    justify-content: center; 
-    align-items: flex-start; 
-    font-size: 2rem; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    font-size: 2rem;
     margin-left: 240px;
     margin-top: 5%;
 }
-.special-button-home {
+
+.specialButtonHome {
     margin-left: 20px;
-    padding: 15px 35px; 
+    padding: 15px 35px;
     font-family: "Ultra", serif;
-    font-size: 18px; 
+    font-size: 18px;
     font-weight: 500;
     display: inline-block;
     color: white;
@@ -67,7 +71,12 @@
     border-radius: 15px;
 }
 
-.image-spider {
+.specialButtonHome:hover {
+    background-color: #e99400;
+    color: white;
+}
+
+.imageSpider {
     position: relative;
     height: 500px;
     float: right;
@@ -77,12 +86,8 @@
     z-index: 1000;
 }
 
-.image-spider:hover {
+.imageSpider:hover {
     margin-top: -3%;
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
-}
-.special-button-home:hover {
-    background-color: #e99400;;
-    color: white;
 }
